--- a/components/nw1l4m4vd-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/nw1l4m4vd-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: nw1l4m4vd-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-c51a233f56.7p73.p3.openshiftapps.com/rhtap/rhtap-qe:aef4d2ba0f0719e0dc337b406e1b65465cedc14a@sha256:d48fe4c5017dae0e46053f10f1c12e658b9fc7037564daab0f205e0906461baf
+          name: container-image
